This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

1.22.1 (UNRELEASED)
-------------------
Bug fixes:
 - dupdb-admin: Use the in-memory CrashDB implementation for simple operations
   like dump or changeid, which do not require an actual backend. This makes
   the command work in checkouts without a /etc/apport/crashdb.conf.
 - dupdb-admin: Fix UnicodeEncodeError crash.

1.22 (2011-08-25)
-----------------
Improvements:
 - Completely rework apport-retrace to use gdb's "debug-file-directory" and
   "solib-absolute-prefix" settings and only unpack the necessary packages in a
   temporary directory. This makes it possible to use it in a running system
   without actually touching installed packages, does not need any root
   privileges, and stops the requirement of using chroots with fakechroot and
   fakeroot. This is a lot easier to maintain and use, and a lot faster, too.
   As a consequence, drop the chroot module, and update crash-digger
   accordingly. See "man apport-retrace" for the new usage.
   It is now also easier to port to other packaging backends, as a lot of the
   common logic moved out of the packaging API;
   packaging.install_retracing_packages() got dropped in favor of the simpler
   packaging.install_packages().
 - crash-digger: Show how many bugs are left in the pool with each new retrace.

Bug fixes:
 - apport-gtk: Fix crash in GLib.markup_escape_text() call, regression from
   1.21.3. (LP: #828010)
 - launchpad.py: When searchTasks() times out, exit with 99 as this is a
   transient error.
 - crash-digger: Intercept OverflowError from downloaded compressed
   attachments.

1.21.3 (2011-08-17)
-------------------
Bug fixes:
 - gtk/apport-gtk.desktop.in: Also show in Unity. (LP: #803519)
 - apport-unpack: Fix crash on file errors.
 - Add apport.packaging.get_library_paths() interface and implement it for